--- a/user/view/default/common/head.html
+++ b/user/view/default/common/head.html
@@ -6,5 +6,6 @@
 <!-- 定义链接样式表 -->
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
 <link rel="stylesheet" rev="stylesheet" href="{{$PSTATIC}}/style/style2.css" type="text/css"/>
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}images/style3.css" type="text/css"/>
 <script  src='user/view/default/js/jquery.js' type="text/javascript"></script>
 </head>
