--- a/admin/view/default/common/head.html
+++ b/admin/view/default/common/head.html
@@ -7,4 +7,5 @@
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
 <link rel="stylesheet" rev="stylesheet" href="{{$PSTATIC}}/style/style2.css" type="text/css"/>
 <script language='javascript' src='{{$PSTATIC}}/style/fun_normal.js'></script>
+<script language='javascript' src='/style/jq.js'></script>
 </head>
