--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -108,23 +108,17 @@ function changeNode()
 			
 			<tr class="main_bgcolor">
 				<td>产品名称：</td>
-				<td><input name='name' type='text' id='tb_wid3'
-					value="{{$vhostproduct.name}}" size="16">
-				</td>
+				<td><input name='name' type='text' id='tb_wid3' value="{{$vhostproduct.name}}" size="16"></td>
 			</tr>
 			
 			<tr class="main_bgcolor" >
 				<td>显示顺序：</td>
-				<td><input name='view' type='text' id='tb_wid3'
-					value="{{$vhostproduct.view}}" size="16">
-				</td>
+				<td><input name='view' type='text' id='tb_wid3'	value="{{$vhostproduct.view}}" size="16"></td>
 			</tr>
 			
 			<tr class="main_bgcolor" >
 				<td>产品组：</td>
-				<td><input name='upid' type='text'
-					value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)
-				</td>
+				<td><input name='upid' type='text' value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)</td>
 			</tr>
 			
 			<tr class="main_bgcolor" >
@@ -150,27 +144,27 @@ function changeNode()
 				<td colspan='2' style="padding-left:0px;">
 					<div id='cdnpanel' style='display:{{if $vhostproduct.cdn==1}}none{{/if}}'>
 						<table class="table_main2" cellpadding="0" cellspacing="1">
+						
 							<tr class="main_bgcolor">
 								<td class="wid_general">空间大小(M)：</td>
-								<td><input name="web_quota" type="text"
-									id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
+								<td><input name="web_quota" type="text" id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
 							</tr>
+							
 							<tr class="main_bgcolor">
 								<td>数据库大小(M)：</td>
-								<td><input name="db_quota" type="text"
-									id='tb_wid3' value="{{$vhostproduct.db_quota}}"></td>
+								<td><input name="db_quota" type="text" id='tb_wid3' value="{{$vhostproduct.db_quota}}"></td>
 							</tr>
+							
 							<tr class="main_bgcolor">
 								<td>绑定子目录</td>
-								<td>
-									<input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录
-								</td>
+								<td><input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录</td>
 							</tr>
+							
 							<tr class="main_bgcolor" >
 								<td>默认绑定子目录:</td>
-								<td><input name="subdir" type="text" id='tb_wid3'
-									value="{{if $vhostproduct.subdir}}{{$vhostproduct.subdir}}{{else}}wwwroot{{/if}}" size="16"></td>
+								<td><input name="subdir" type="text" id='tb_wid3' value="{{if $vhostproduct.subdir}}{{$vhostproduct.subdir}}{{else}}wwwroot{{/if}}" size="16"></td>
 							</tr>
+							
 							<tr class="main_bgcolor" >
 								<td>模板</td>
 								<td id='templete2'>
@@ -178,6 +172,7 @@ function changeNode()
 									<div id='subtemplete'></div>
 								</td>
 							</tr>
+							
 							<tr class="main_bgcolor">
 								<td>多引擎切换:</td>
 								<td>
@@ -186,6 +181,7 @@ function changeNode()
 									<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostproduct.cs==2}}checked{{/if}} size="16">购买时切换
 								</td>
 							</tr>
+							
 					  </table>
 					</div>
 				</td>
@@ -195,52 +191,38 @@ function changeNode()
 				<td>价格(元/年)</td>
 				<td>
 				<input name="price" type="text" id='tb_wid3' value="{{$vhostproduct.price/100}}">
-				<input type="checkbox" name="show_price" value="1" {{if $vhostproduct.show_price!=0}}checked{{/if}}>前台按月显示
-				</td>
+				<input type="checkbox" name="show_price" value="1" {{if $vhostproduct.show_price!=0}}checked{{/if}}>前台按月显示</td>
 			</tr>
 			
 			{{if count($agent_ids)>0}}
 			<tr class="main_bgcolor" >
 				<td>代理价格</td>
 				<td>
-					{{for $i=0;$i< count($agent_ids);$i++}}
-					{{$agent_ids[$i].name}}:
-					<input name="agentprice_{{$agent_ids[$i].id}}" type="text" id='tb_wid3' value="{{$agent_ids[$i].price/100}}" style="width:45px" />
-					{{/for}}
+				{{for $i=0;$i< count($agent_ids);$i++}}
+					{{$agent_ids[$i].name}}:<input name="agentprice_{{$agent_ids[$i].id}}" type="text" id='tb_wid3' value="{{$agent_ids[$i].price/100}}" style="width:45px" />
+				{{/for}}
 				</td>
 			</tr>
 			{{/if}}
 			
 			<tr class="main_bgcolor" >
 				<td>域名绑定个数(-1表示无限)</td>
-				<td>
-					<input name="domain" type="text" id='tb_wid3'
-					value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}">
-				</td>
+				<td><input name="domain" type="text" id='tb_wid3' value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}"></td>
 			</tr>
 			
 			<tr class="main_bgcolor" >
 				<td>最大连接数(0无限)</td>
-				<td>
-					<input name="max_connect" type="text"
-					size='5' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}">
-				</td>
+				<td><input name="max_connect" type="text" size='5' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}"></td>
 			</tr>
 			
 			<tr class="main_bgcolor" >
 				<td>带宽限制(0无限)</td>
-				<td>
-					<input name="speed_limit" type="text"
-					size='5' value="{{if $vhostproduct}}{{$vhostproduct.speed_limit/1024}}{{else}}0{{/if}}">&nbspK/每秒
-				</td>
+				<td><input name="speed_limit" type="text" size='5' value="{{if $vhostproduct}}{{$vhostproduct.speed_limit/1024}}{{else}}0{{/if}}">&nbspK/每秒</td>
 			</tr>
 			
 			<tr class="main_bgcolor" >
 				<td>管理变量:</td>
-				<td>
-					<input name="envs" type="text" id='tb_wid3'
-					value="{{$vhostproduct.envs}}" size="40">
-				</td>
+				<td><input name="envs" type="text" id='tb_wid3'	value="{{$vhostproduct.envs}}" size="40"></td>
 			</tr>
 			
 			<tr class="main_bgcolor">
@@ -267,7 +249,8 @@ function changeNode()
 			</tr>
 			
 			<tr class="main_bgcolor" >
-				<td>&nbsp;</td><td><input type="submit" value="确认提交"></td>
+				<td>&nbsp;</td>
+				<td><input type="submit" value="确认提交"></td>
 			</tr>
 			
 			
